# UWB_swarm_demo

./: README.md  developers_readme.md  explainations.md  project_plan.md
readme/: ARCHITECTURE.md  CrazyflieSwarm.md  Formations.md  GUI.md
src/: .gitignore  README.md  config.py  drone_commands.py  formations.py  gui.py  main.py  pyproject.toml  tests.py
src/cache/: 67FD3C3E.json  D078A73E.json
src/uwb_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
