[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "uwb-demo"
version = "0.1.0"
description = "Control tower GUI for Crazyflie swarm flights."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cflib>=0.1.19",
    "matplotlib>=3.10.8",
]

[tool.uv]
# Add dev-only tools here. Examples: "pytest>=7.4", "ruff>=0.6".
dev-dependencies = []
